Se siguio poniendo texto

--- a/document.tex
+++ b/document.tex
@@ -34,6 +34,7 @@
 		\item Con \textcolor{blue}{git status} se muestran las modificaciones del proyecto
 		\item Para añadir los archivos a la sincronización se utiliza el comando \textcolor{blue}{git add}
 		\item Para agregar todo al proyecto se utliza \textcolor{blue}{git add -A}
+		\item Para agregar se utiliza el comando \textcolor{blue}{git commit -m} y un mensaje entre comillas para identificar la modificación
 	\end{itemize}
 
 	
