--- a/document.tex
+++ b/document.tex
@@ -35,6 +35,7 @@
 		\item Para añadir los archivos a la sincronización se utiliza el comando \textcolor{blue}{git add}
 		\item Para agregar todo al proyecto se utliza \textcolor{blue}{git add -A}
 		\item Para agregar se utiliza el comando \textcolor{blue}{git commit -m} y un mensaje entre comillas para identificar la modificación
+		\item Para ver una lista con los comentarios se utiliza el comando \textcolor{green}{git log}
 	\end{itemize}
 
 	
