--- a/document.tex
+++ b/document.tex
@@ -58,4 +58,16 @@
 	\item Para crear y cambia automaticamente a una nueva rama se utiliza el comando \textcolor{blue}{git checkout -b nueva rama}
 	\end{itemize}
 
+	\section{Video 5: GitHub}
+	
+	\begin{itemize}
+		
+	\item El comando \textcolor{green}{git clone} toma un proyecto de GitHub y lo pasa a la computadora
+	\item El comando \textcolor{green}{git remote add origin} vincula el proyecto local con nuestro proyecto remoto
+	\item Para comprobar el vinculo se utiliza el comando \textcolor{green}{git remote -v}
+	\item Para desvincular se utiliza \textcolor{green}{git remote remove origin}
+	\item Para sincronizar se utiliza \textcolor{green}{git push origin + la rama a pasar}
+	
+	\end{itemize}
+
 \end{document}
