para la rama de prueba

--- a/document.tex
+++ b/document.tex
@@ -67,7 +67,7 @@
 	\item Para comprobar el vinculo se utiliza el comando \textcolor{green}{git remote -v}
 	\item Para desvincular se utiliza \textcolor{green}{git remote remove origin}
 	\item Para sincronizar se utiliza \textcolor{green}{git push origin + la rama a pasar}
-	
+	\item Para hacer una prueba con las ramas en GitHub
 	\end{itemize}
 
 \end{document}
