mofidicacion de la finalizacion del commit del video 5

--- a/document.tex
+++ b/document.tex
@@ -68,6 +68,16 @@
 	\item Para desvincular se utiliza \textcolor{green}{git remote remove origin}
 	\item Para sincronizar se utiliza \textcolor{green}{git push origin + la rama a pasar}
 	\item Para hacer una prueba con las ramas en GitHub
+	
+	
+	\subsection{Issues, Milestones y Labels}
+	
+	\begin{itemize}
+		\item Los \textcolor{red}{Issues} se utilizan para arreglar errores o algo que nos hace falta
+		\item Los \textcolor{red}{Milestones} son grupos de Issues que se aplican para un proyecto, característica o periodo de tiempo
+		\item Los \textcolor{red}{Labels} son etiquetas para los Issues
+	\end{itemize}
+	
 	\end{itemize}
 
 \end{document}
