--- a/document.tex
+++ b/document.tex
@@ -112,4 +112,11 @@
 		\label{fetch}
 	\end{figure}
 
+		\begin{figure}[th]
+		\centering
+		\includegraphics[width = 100mm]{imagenes/Colores}
+		\caption{Colores \LaTeX{}}
+		\label{colores}
+	\end{figure}
+
 \end{document}
