Final Final Final

--- a/document.tex
+++ b/document.tex
@@ -63,7 +63,7 @@
 	\begin{itemize}
 		
 	\item El comando \textcolor{green}{git clone} toma un proyecto de GitHub y lo pasa a la computadora
-	\item El comando \textcolor{green}{git remote add origin} vincula el proyecto local con nuestro proyecto remoto
+	\item El comando \textcolor{green}{git remote add origin $+$ url} vincula el proyecto local con nuestro proyecto remoto
 	\item Para comprobar el vinculo se utiliza el comando \textcolor{green}{git remote -v}
 	\item Para desvincular se utiliza \textcolor{green}{git remote remove origin}
 	\item Para sincronizar se utiliza \textcolor{green}{git push origin + la rama a pasar}
