--- a/document.tex
+++ b/document.tex
@@ -41,6 +41,7 @@
 		\item Para ``Matar los commit" se utiliza el comando \textcolor{green}{git reset} las el código del commit, el cuál se subdivide en \textcolor{blue}{git reset --soft}, el cúal no se mete con el código, esta el \textcolor{blue}{git reset --mixed} y está el comando \textcolor{blue}{git reset --hard} que borra absolutamente todo
 		\item El comando \textcolor{green}{git log $>$ commits.txt} crea un documento de texto con cada uno de los commits
 		\item El comando \textcolor{blue}{git help} da un pequño manual para el uso de git, si se quiere ser mas específico se utiliza git help + el nombre del comando
+		\item Con el comando \textcolor{blue}{git diff} se muestran todas las modificaciones creadas en los archivos sin ser añadidos aún
 		
 	\end{itemize}
 
