--- a/document.tex
+++ b/document.tex
@@ -42,7 +42,7 @@
 		\item El comando \textcolor{green}{git log $>$ commits.txt} crea un documento de texto con cada uno de los commits
 		\item El comando \textcolor{blue}{git help} da un pequño manual para el uso de git, si se quiere ser mas específico se utiliza git help + el nombre del comando
 		\item Con el comando \textcolor{blue}{git diff} se muestran todas las modificaciones creadas en los archivos sin ser añadidos aún
-		
+		\item Para ignorar un archivo o carpeta de archivos se crea un fichero llamado \textcolor{blue}{.gitignore} y dentro de él se escribe el nombre de los ficheros o carpeta de ficheros que se van a ignorar a la hora de subir los archivos
 	\end{itemize}
 
 
